# Logging-Toolkit

./: .gitignore  README.md  pyproject.toml
logging_toolkit/: logger.py  setup_logging.py
logging_toolkit/configs/: error_logging.json  general_logging.json
src/python/: file_logging.json  general_logging.json  logging_config.json  setup_logging.py
tests/python/: test_setup_logging.py
